--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -14,7 +14,6 @@
                 <ResourceDictionary>
                     <vm:RootViewModel x:Key="ViewModel" />
                 </ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Panuon.UI.Silver;component/Control.xaml" />
                 <!--  Global Styles  -->
                 <ResourceDictionary>
                     <Style x:Key="SidePanelContainerBorderStyle" TargetType="Border">
@@ -52,7 +51,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
 
                 <!--  Theme setting  -->
-                <hc:ThemeResources />
+                <hc:ThemeResources RequestedTheme="Dark" />
                 <hc:Theme />
 
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
