Disabled Sorting of value. (Not really needed)

--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -419,6 +419,7 @@
 
                     <syncfusion:TreeGridTemplateColumn
                      AllowEditing="False"
+                     AllowSorting="False"
                      CellTemplateSelector="{StaticResource DataTemplateSelector}"
                      HeaderText="Value"
                      MappingName="Property"
